--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,20 @@ body {
   transition: all 0.4s;
   background-color: rgba(185, 185, 185, 0.492);
 }
+
+.loader {
+  width: 11.2px;
+  height: 11.2px;
+  border-radius: 11.2px;
+  box-shadow: 28px 0px 0 0 rgba(254,87,88,0.2), 22.7px 16.5px 0 0 rgba(254,87,88,0.4), 8.68px 26.6px 0 0 rgba(254,87,88,0.6), -8.68px 26.6px 0 0 rgba(254,87,88,0.8), -22.7px 16.5px 0 0 #fe5758;
+  animation: spinner-b87k6z 1s infinite linear;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
