--- a/app/globals.css
+++ b/app/globals.css
@@ -31,19 +31,59 @@ body {
   background-color: rgba(185, 185, 185, 0.492);
 }
 
-.loader {
-  width: 11.2px;
-  height: 11.2px;
-  border-radius: 11.2px;
-  box-shadow: 28px 0px 0 0 rgba(254,87,88,0.2), 22.7px 16.5px 0 0 rgba(254,87,88,0.4), 8.68px 26.6px 0 0 rgba(254,87,88,0.6), -8.68px 26.6px 0 0 rgba(254,87,88,0.8), -22.7px 16.5px 0 0 #fe5758;
-  animation: spinner-b87k6z 1s infinite linear;
+@keyframes dot-flashing {
+  0% {
+    background-color: #DBDBDB;
+  }
+  50%, 100% {
+    background-color: rgba(152, 128, 255, 0.2);
+  }
+}
+stage {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} 
+.dot-flashing {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #DBDBDB;
+  color: #DBDBDB;
+  animation: dot-flashing 800ms infinite linear alternate;
+  animation-delay: 0.5s;
+}
+
+.dot-flashing::before,
+.dot-flashing::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+}
+
+.dot-flashing::before {
+  left: -15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #DBDBDB;
+  color: #DBDBDB;
+  animation: dot-flashing 1s infinite alternate;
+  animation-delay: 0s;
+}
+
+.dot-flashing::after {
+  left: 15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #DBDBDB;
+  color: #DBDBDB;
+  animation: dot-flashing 1s infinite alternate;
+  animation-delay: 1s;
+}
