--- a/app/globals.css
+++ b/app/globals.css
@@ -30,8 +30,8 @@ body {
 }
 .navlinks >*:hover{
   transition: all 0.4s;
-  background-color: #ffffff;
   color: #191919;
+  background-color: #ffffff;
 }
 
 @keyframes dot-flashing {
@@ -95,14 +95,17 @@ stage {
 }
 
 
-div.dev-card{
+.dev-card{
   /* background-image: url('../assets/team-bg.png'); */
-  
   background-size: cover; 
   background-position: center;
   width: 100%;
   /* background: radial-gradient(circle at 0% 93%,#000294, #3f41bd, #b2b2b2) */
-  background: radial-gradient(circle at 0% 125%,#5c57ff, #9d64ff, #d572ff)
+  /* background: radial-gradient(circle at 0% 125%,#5c57ff, #9d64ff, #d572ff) */
+  background: radial-gradient(circle at 50% 50%,#5e8fffcc, #7e77ffe6, #bd8fff)
+}
+.dev-card:hover{
+  background: radial-gradient(circle at 50% 50%,#5651ff, #8f70ff, #bd8fff)
 }
 div.routines-bg{
   background-image: url('../assets/routines-bg.png');
@@ -115,4 +118,16 @@ div.routines-bg{
 
 svg.rbh polygon:hover{
 fill: #9d64ff !important;
+}
+svg.svg-subscribe{
+  transition: transform 0.3s ease;
+}
+input.subscribe.focus {
+  /* Add styles to the input when focused */
+}
+
+/* Styles when SVG is filled with red */
+svg.subscribe-focused {
+  fill: rgb(16, 16, 189); /* Change the fill color to red */
+  transform:scale(1.4);
 }
