--- a/app/globals.css
+++ b/app/globals.css
@@ -127,6 +127,20 @@ svg.subscribe-focused {
   background-color: transparent !important;
   color: #f3f3f3 !important;
 }
+.ASS>*>*{
+  width: 100% !important;
+padding: 5px;
+display: flex;
+flex-direction: row;
+gap: 5px !important;
+align-items: center;
+margin: 0 !important;
+}
+.ASS>*{
+  margin: 0 !important;
+  padding: 0 !important;
+}
+/* 
 .header-Dropdown{
   padding: 0px 5px;
 }
@@ -134,7 +148,6 @@ svg.subscribe-focused {
 padding: 5px;
 width: 100%;
 cursor: pointer;
-/* margin-left: 5px; */
 transition: all;
 transition-duration: 300ms;
 }
@@ -146,4 +159,4 @@ transition-duration: 300ms;
   flex-direction: row;
   gap: 5px;
   align-items: center;
-}
+} */
