added auto-type, changed the color of (watch yourself grow) from gradiant to white, added little animaation for (Team section), fixed after logging in it redirect you back to login page, fixed gmail password reset problem

--- a/app/globals.css
+++ b/app/globals.css
@@ -140,3 +140,7 @@ margin: 0 !important;
   padding: 2px !important;
   margin-top: 2px !important;
 }
+.typed-cursor {
+color: #ffffff;
+font-size:large;
+}
